project('vrockutils', 'cpp', version: '0.0.2')

subdir('src/')

#################
##### tests #####
#################

if get_option('tests')
    subdir('tests')
endif

####################
##### examples #####
####################

if get_option('examples')
    subdir('examples')
endif

################
##### docs #####
################

if get_option('docs')
    subdir('docs')
endif